--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ header{
   justify-content: space-between;
   align-items: center;
   padding:0 4.5rem 0 1.9rem;
+  box-shadow: 0px 1px 20px rgba(139, 139, 139, 0.65);
 }  
 
 .navegation-bar{
