--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,6 +121,7 @@ header{
 .promotion-card-box{
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
    
 }
 
@@ -130,11 +131,11 @@ header{
 }
 
 .product-card img{
-  width: 100%;
+  
 }
 
 .product-description{
-  padding: 1.8rem 2.3rem 2.5rem 1.1rem;
+  padding: 1.8rem 1.8rem 2.5rem 1.1rem;
   font-size: 1.6rem;
   line-height: 2.179rem;
   font-weight: 600;
@@ -193,5 +194,55 @@ footer{
   width: 100%;
   background-color: #C2185B;
   height: 24.8rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: #FFFFFF;
+  padding: 0 14.8rem 0 7.6rem;
+}
+
+.logo-box{
+  display: flex;
+  flex-direction: column;
+  font-size: 1.4rem;
+}
+
+.logo-box a{
+  height: 12.3rem;
+}
+
+.logo-box p{
+  width: 25.5rem;
+  padding-top: 0;
+  margin-top: 0;
+  position: relative;
+  bottom: 2rem;
+}
+
+.categories{
+  font-size: 1.6rem;
+  margin-left: 12rem;
+  padding: 5.6rem 0 5.5rem 0;
+}
+
+.categories h3{
+  font-size: 2rem;
+}
+
+.categories ul, .institutional ul{
+  list-style: none;
+}
+
+.categories a, .institutional a{
+  text-decoration: none;
+  color: #FFFFFF;
+}
+.institutional{
+  font-size: 1.6rem;
+  padding: 5.6rem 0 3.1rem 0;
+
+}
+.institutional h3{
+  font-size: 2rem;
 }
 
