--- a/assets/css/work-with-us.css
+++ b/assets/css/work-with-us.css
@@ -1,5 +1,6 @@
-@import url("./global.css");
+@import url("./style.css");
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 
 :root{
@@ -11,11 +12,12 @@ main{
   margin: 5.9% 0;
   display: flex;
   justify-content: center;
+  font-family: 'Roboto', sans-serif;
 }
 
 .main-section-box{
-  width: 64.9rem;
-  height: 74vh;
+  width: 48%;
+  /* height: 74vh; */
   border: 1px solid #9B9B9B;
   box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.25);
 }
@@ -27,6 +29,26 @@ main{
   color: #575757;
   text-align: center;
   margin: 3rem 0;
+  font-family: 'Open Sans', sans-serif;
+}
+
+form button{
+  width: 100%;
+  height: 5.3vh;
+
+  background-color: #C2185B;
+
+  border: none;
+
+  margin-bottom: 4.5rem;
+  color: #FFF;
+
+  transition: .6s;
+}
+
+form button:hover{
+  cursor: pointer;
+  background-color: #7C0333;
 }
 
 
@@ -47,6 +69,11 @@ main{
 .input-wrapper{
   display: flex;
   flex-direction: column;
+
+  width: 100%;
+
+  margin: 0 auto;
+
   font-size: 1.8rem;
   color: #9B9B9B;
   margin: 0 auto;
@@ -65,11 +92,115 @@ main{
   margin: 0 auto;
   width: 100%;
   font-weight: 700;
+  
+}
+
+.select-departaments{
+  height: 2.6rem;
+  margin-bottom: 1.5rem;
+  /* appearance: none; */
+}
+
+.availability-title{
+  display: flex;
+  flex-direction: column;
+
+  font-size: 1.8rem;
+  color: #9B9B9B;
+  font-weight: 700;
+
+  margin-bottom: 1.2rem;
+} 
+
+.checkbox-container label{
+  font-size: 1.4rem;
+  line-height: 1.641rem;
+  margin-right: 1.2rem;
+}
+
+.checkbox-container input[type="checkbox"]{
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.the-best-way-box span{
+  display: block;
+
+  font-size: 1.8rem;
+  font-weight: 700;
+  line-height: 2.109rem;
+
+  color: #9B9B9B;
+
+  margin-bottom: 1.2rem;
 }
 
 
-.availability{
+.the-best-way-box input[type="radio"]{
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.the-best-way-box label{
+  font-size: 1.4rem;
+  line-height: 1.641rem;
+  margin-right: 5.2rem;
+}
+
+.msg-box{
+  margin-bottom: 2.5rem;
+}
+
+.msg-box textarea{
+  width: 100%;
+  height: 14.8vh;
+  resize: vertical;
+}
+
+.msg-box label{
+  font-size: 1.8rem;
+  font-weight: 700;
+  line-height: 2.109rem;
+
+  color: #9B9B9B;
+
+  margin-bottom: 2rem;
+}
+
+.resume-box{
   display: flex;
-  flex-direction: column;
-  
-} 
+ 
+}
+
+.resume-box input[type="file"]{
+  display: none;
+}
+
+.resume-box span{
+  font-size: 1.8rem;
+  font-weight: 700;
+  line-height: 2.109rem;
+
+  color: #9B9B9B;
+}
+
+.resume__label-box{
+  width:11.8rem;
+  background-color: #C4C4C4;
+
+  margin:0 0 2.2rem 1.8rem;
+}
+
+.resume-box label{
+  font-size: 1.4rem;
+  line-height: 2.108rem;
+  margin: 0;
+  color: #FFF;
+
+  display: flex;
+  justify-content: center;
+
+  cursor: pointer;
+
+}
+
